syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;

import "GrpcEvitaDataTypes.proto";

message GrpcUpsertAssociatedDataMutation {
  string associatedDataName = 1;
  GrpcLocale associatedDataLocale = 2;
  GrpcEvitaAssociatedDataValue associatedDataValue = 3;
}

message GrpcRemoveAssociatedDataMutation {
  string associatedDataName = 1;
  GrpcLocale associatedDataLocale = 2;
}