syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;

import "GrpcEvitaDataTypes.proto";

message GrpcLocalizedAttribute {
  map<string, GrpcEvitaValue> attributes = 1;
}